# hyp-despot-alpha-dev

./: CMakeLists.txt  README.md  package.xml
doc/: Build GPU POMDP model with CUDA.md  Build_GPU_POMDP_model_with_CUDA.md  Nsight_guide.md
msg/: Belief.msg  SpeedError.msg  State.msg
src/HyP_examples/CarDriving/: CMakeLists.txt  WorldModel.cpp  WorldModel.h  collision.cpp  controller.cpp  controller.h  custom_particle_belief.cpp  custom_particle_belief.h  param.cpp  param.h  ped_pomdp.cpp  ped_pomdp.h  prior.h  simulator.cpp  simulator.h  state.h
src/HyP_examples/CarDriving/GPU_Car_Drive/: GPU_CarUpperBound.cu  GPU_CarUpperBound.h  GPU_Car_Drive.cu  GPU_Car_Drive.h  GPU_Init.cu  GPU_LowerBoundPolicy.cu  GPU_LowerBoundPolicy.h  GPU_param.cu  GPU_param.h
src/HyP_examples/CarDriving/config_files/: load_peds.txt  no_car_vel_correction.txt  no_car_vel_correction_load_peds.txt  noise_goal_angle_45.txt  noise_goal_angle_90.txt
src/HyP_examples/adventurer/src/: adventurer.cpp  adventurer.h  main.cpp
src/HyP_examples/grasping_ros_mico/: CMakeLists.txt  ObjectNameToIdMapping.yaml  Readme.txt  real_command.sh
src/HyP_examples/grasping_ros_mico/src/: ActionSpecification.h  GraspObject.cpp  GraspObject.h  GraspingObservation.h  GraspingStateRealArm.h  KerasModels.cpp  KerasModels.h  Quaternion.h  RealArmInterface.cpp  RealArmInterface.h  RobotInterface.cpp  RobotInterface.h  ScikitModels.cpp  ScikitModels.h  VrepDataInterface.cpp  VrepDataInterface.h  VrepInterface.cpp  VrepInterface.cpp.vrepVersion3_2_0  VrepInterface.h  VrepLogFileInterface.cpp  VrepLogFileInterface.h  apc_despot_interface.cpp.noCompile  apc_despot_interface.h  grasping_real_arm.cpp  grasping_real_arm.h  grasping_ros_tui.h  grasping_v4_particle_belief.h  inference_cc.h  log_file_reader.cpp  log_file_reader.h  main.cpp  main_gather_data.cpp  main_without_display.cpp  simulation_data.h  simulation_data_reader.cpp  simulation_data_reader.h
src/HyP_examples/grasping_ros_mico/src/Display/: cupDisplay.cpp  cupDisplay.h  mainCupDisplay.cpp  parameters.h
src/HyP_examples/grasping_ros_mico/src/despot_ext/: CMakeLists.txt.unused
src/HyP_examples/grasping_ros_mico/src/despot_ext/include/: DeepLearningSolver.h  DespotWithBeliefTracking.h  DespotWithLearnedDefaultPolicy.h  GraspingPOMDPWorld.h  LearningModel.h  LearningPlanningSolver.h  LearningSolverBase.h  PlanningDiffParamsSolver.h  UserDefinedActionSolver.h  ext_tui.h  history_with_reward.h  observation.h
src/HyP_examples/grasping_ros_mico/src/despot_ext/src/: DeepLearningSolver.cpp  DespotWithBeliefTracking.cpp.unused  DespotWithLearnedDefaultPolicy.cpp.unused  GraspingPOMDPWorld.cpp  LearningModel.cpp  LearningPlanningSolver.cpp.unused
src/HyP_examples/ma_rock_sample/: CMakeLists.txt
src/HyP_examples/ma_rock_sample/config_files/: 10bit_obs.txt  16bit_obs.txt  1_agent.txt  continuous_obs.txt  continuous_obs_2agents.txt
src/HyP_examples/ma_rock_sample/src/GPU_MA_RS/: GPU_base_ma_rock_sample.cu  GPU_ma_rock_sample.cu  GPU_ma_rock_sample.h
src/HyP_examples/ma_rock_sample/src/base/: base_ma_rock_sample.cpp  base_ma_rock_sample.h
src/HyP_examples/ma_rock_sample/src/ma_rock_sample/: ma_rock_sample.cpp  ma_rock_sample.h  main.cu
src/HyP_examples/tag/: CMakeLists.txt  plotPositions.py
src/HyP_examples/tag/config_files/danger_tag/: closedZMap.txt  openSingleR-movementError6.txt  openSingleR.txt  openSingleR14x14-movementError6.txt  openSingleR15x15-movementError6.txt  openZMap.txt  smallOpenZMap-movementError6.txt  smallOpenZMap.txt  smallSingleR-movementError6.txt  smallSingleR.txt
src/HyP_examples/tag/src/base/: base_tag.cpp  base_tag.h
src/HyP_examples/tag/src/danger_tag/: danger_tag.cpp  danger_tag.h  main.cpp
src/HyP_examples/tag/src/laser_tag/: laser_tag.cpp  laser_tag.h  main.cpp
src/HyP_examples/tag/src/tag/: main.cpp
src/HyP_examples/tiger/: CMakeLists.txt
src/HyP_examples/tiger/src/: main.cpp  tiger.cpp  tiger.h  tiger2actions.cpp  tiger2actions.h
src/HyP_examples/unkown_navigation/: CMakeLists.txt
src/HyP_examples/unkown_navigation/config_files/: new_belief_16bits.txt  new_belief_16bits_01noise.txt  new_belief_16bits_01noise_stay03.txt  new_belief_16bits_02noise.txt  new_belief_8bits.txt  new_belief_8bits_01noise.txt  new_belief_8bits_02noise.txt  old_belief_16bits.txt  old_belief_8bits.txt
src/HyP_examples/unkown_navigation/src/GPU_Unk_nav/: GPU_UncNavigation.cu  GPU_UncNavigation.h  GPU_base_unc_navigation.cu  GPU_base_unc_navigation.h
src/HyP_examples/unkown_navigation/src/Unc_Navigation/: UncNavigation.cpp  main.cu  (+1 more)
src/HypDespot/: CMakeLists.txt
src/HypDespot/include/despot/: GPUconfig.h  config.h  keras_random_streams.h  planner.h  plannerbase.h  random_streams.h
src/HypDespot/src/: evaluator.cpp  keras_random_streams.cpp  logger.cpp  planner.cpp  plannerbase.cpp
src/HypDespot/src/GPUcore/: GPUbuiltin_lower_bound.cu  GPUbuiltin_policy.cu  GPUbuiltin_upper_bound.cu  GPUconfig.cu  GPUnode.cu  shared_node.cu  thread_globals.cu
src/HypDespot/src/GPUinterface/: GPUlower_bound.cu  GPUpomdp.cu
src/HypDespot/src/core/: builtin_lower_bounds.cpp  builtin_upper_bounds.cpp  globals.cpp  node.cpp  solver.cpp
src/HypDespot/src/interface/: default_policy.cpp  lower_bound.cpp  policy_graph.cpp  pomdp.cpp  upper_bound.cpp
src/HypDespot/src/solver/: DespotWithAlphaFunctionUpdate.cpp  Hyp_despot.cu  Keras_despot.cpp  despot.cpp
src/HypDespot/src/util/: random.cpp
srv/: MicoActionFeedback.srv
tools/: Exp_score_car.py  Exp_score_car_old_log.py  Particles1.txt  Particles10.txt  Particles11.txt  Particles12.txt  Particles13.txt  Particles14.txt  Particles15.txt  Particles16.txt  Particles17.txt  Particles18.txt  Particles19.txt  Particles2.txt  Particles20.txt  Particles21.txt  Particles3.txt  Particles4.txt  Particles5.txt  Particles6.txt  Particles7.txt  Particles8.txt  Particles9.txt  Peds.txt  Peds.txt.bk  Streams1.txt  Streams10.txt  Streams11.txt  Streams12.txt  Streams13.txt  Streams14.txt  Streams15.txt  Streams16.txt  Streams17.txt  Streams18.txt  Streams19.txt  Streams2.txt  Streams20.txt  Streams21.txt  Streams3.txt  (+11 more)
(+27 files in other folders)
